got rid of the stack overflow issue, fixed up the demo page a bit

--- a/css/px-slider.css
+++ b/css/px-slider.css
@@ -234,9 +234,7 @@ html {
   /*! Comment to prevent cssmin munging this rule with html above and borking Safari */
   box-sizing: border-box; }
 
-*,
-*:before,
-*:after {
+*, *:before, *:after {
   box-sizing: inherit; }
 
 .flex {
@@ -393,6 +391,44 @@ html {
 .viewport--full-height {
   min-height: 100vh; }
 
+/*------------------------------------*    #PX-COLORS-DESIGN
+\*------------------------------------*/
+/**
+ * Brand Colors
+ */
+/**
+     * Primary
+     */
+/**
+     * Light
+     */
+/**
+     * Dark
+     */
+/**
+ * Monochromatic (gray10 is darkest, gray1 is lightest)
+ */
+/**
+ * Buttons
+ */
+/**
+ * Selection
+ */
+/**
+ * Alerts
+ */
+/**
+ * Data Visualization
+ */
+/**
+     * Basic
+     */
+/**
+     * Light
+     */
+/**
+     * Dark
+     */
 fieldset {
   margin: 0; }
   fieldset, fieldset legend {
@@ -439,9 +475,9 @@ textarea {
   box-shadow: inset 0 0 0 1px #e4e4ea;
   background-color: #efeff4;
   color: black; }
-  .text-input[readonly],
-  .text-input[disabled],
-  textarea[readonly], textarea[disabled] {
+  .text-input[readonly], .text-input[disabled],
+  textarea[readonly],
+  textarea[disabled] {
     box-shadow: none; }
   .text-input[readonly],
   textarea[readonly] {
@@ -499,8 +535,7 @@ select {
 .text-input {
   height: 2em;
   line-height: 1; }
-  .text-input + [type=checkbox],
-  .text-input + [type=radio] {
+  .text-input + [type=checkbox], .text-input + [type=radio] {
     margin-left: 1.3333333333rem; }
   .text-input + .label--inline {
     margin-left: 0.6666666667rem; }
@@ -512,8 +547,7 @@ select {
   .text-input:-moz-placeholder {
     padding-top: 1px; }
 
-.text-input + [type=submit],
-.text-input [type=cancel],
+.text-input + [type=submit], .text-input [type=cancel],
 .label--inline + [type=submit],
 .label--inline [type=cancel] {
   margin-left: 1.3333333333rem; }
@@ -531,8 +565,7 @@ textarea {
   cursor: pointer; }
   [type=checkbox][disabled], [type=radio][disabled] {
     cursor: not-allowed; }
-    [type=checkbox][disabled] + .label--inline,
-    [type=radio][disabled] + .label--inline {
+    [type=checkbox][disabled] + .label--inline, [type=radio][disabled] + .label--inline {
       cursor: not-allowed; }
 
 [type=checkbox] + .label--inline {
@@ -576,7 +609,10 @@ textarea {
   border-radius: 2px 0 0 2px; }
 
 .text-input {
-  width: 4.1333333333rem; }
+  width: 4.3333333333rem; }
+
+#sliderContainer {
+  cursor: pointer; }
 
 .slider {
   border-color: #b1b1bc;
